syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "Contracts/eic_function.proto";

option csharp_namespace = "Energinet.DataHub.Reports.Infrastructure.Contracts";

/*
 * GridAreaOwnershipAssigned Integration Event.
 *
 * Occurs when an actor is assigned ownership of a grid area through the specified market role.
 */
message GridAreaOwnershipAssigned {

  /*
   * The EIC or GLN identifier of the actor that got assigned ownership.
   */
  string actor_number = 1;

  /*
   * The code of the grid area that the actor got ownership of.
   */
  string grid_area_code = 2;

  /*
   * The market role for which the ownership is assigned.
   */
  EicFunction actor_role = 3;

  /*
   * A timestamp from when the ownership is valid.
   */
  google.protobuf.Timestamp valid_from = 4;

  /*
   * The sequence number of the event. Used to distinguish between events with identical valid_from timestamps.
   */
  int32 sequence_number = 5;
}
